--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-
-fastapi
-uvicorn
-sqlalchemy
-pydantic
-pandas
-numpy
-python-multipart
+fastapi==0.95.2
+uvicorn==0.22.0
+sqlalchemy==2.0.15
+pydantic==1.10.7
+pandas==2.0.1
+numpy==1.24.3
+python-multipart==0.0.6
 python-binance==1.0.29
+psycopg2-binary==2.9.6
+gunicorn==20.1.0
+python-dotenv==1.0.0
