--- a/render.yaml
+++ b/render.yaml
@@ -3,11 +3,19 @@ services:
     name: power-ms-trading-pro-backend
     env: python
     region: frankfurt  # أو أي منطقة قريبة منك
-    buildCommand: "pip install -r requirements.txt"
+    buildCommand: |
+      python -m pip install --upgrade pip setuptools wheel
+      pip install -r requirements.txt
     startCommand: "gunicorn main:app --workers 4 --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT"
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
+      - key: PYTHONUNBUFFERED
+        value: 1
+      - key: PYTHONDONTWRITEBYTECODE
+        value: 1
+      - key: PYTHONPATH
+        value: "/opt/render/project/src:/opt/render/project/src/.venv/lib/python3.9/site-packages"
       - key: PORT
         value: 10000
       - key: BINANCE_API_KEY
