--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+# إصدارات Python الأساسية
+setuptools>=65.5.1
+wheel>=0.40.0
+
+# تبعيات المشروع
 fastapi==0.95.2
 uvicorn==0.22.0
 sqlalchemy==2.0.15
