--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ wheel>=0.40.0
 
 # تبعيات المشروع
 fastapi==0.95.2
-uvicorn==0.22.0
+uvicorn[standard]==0.22.0
 sqlalchemy==2.0.15
 pydantic==1.10.7
 pandas==2.0.1
@@ -14,3 +14,4 @@ python-binance==1.0.29
 psycopg2-binary==2.9.6
 gunicorn==20.1.0
 python-dotenv==1.0.0
+--no-binary :all:
