--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
-# إصدارات Python الأساسية
-setuptools>=65.5.1
-wheel>=0.40.0
-
-# تبعيات المشروع
 fastapi==0.95.2
 uvicorn[standard]==0.22.0
-sqlalchemy==2.0.15
+sqlalchemy>=1.4.0,<2.0.0
 pydantic==1.10.7
 pandas==2.0.1
 numpy==1.24.3
@@ -14,4 +9,3 @@ python-binance==1.0.29
 psycopg2-binary==2.9.6
 gunicorn==20.1.0
 python-dotenv==1.0.0
---no-binary :all:
